fixed the search bar on mobile view

--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -28,10 +28,10 @@
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
     .form {
-        display: flexs;
-        width: 40%; 
+        display: flex;
+        width: 100%; 
         padding: 0;
         justify-content: flex-end;
         align-items: center;
